--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-
-streamlit>=1.36.0
-transformers>=4.41.0
-torch>=2.3.0
-diffusers>=0.30.0
-accelerate>=0.33.0
-safetensors>=0.4.3
-numpy
-Pillow
+streamlit==1.28.0
+transformers==4.42.0
+diffusers==0.20.0
+torch>=2.0.0
+torchvision>=0.15.0
+Pillow>=9.5.0
+fpdf2>=2.6.0
+requests>=2.31.0
+numpy>=1.25.0
